fwr: mantis 15514, make text near checkbox not selectable + fix disabled scrollbar skin
git-svn-id: svn+ssh://kelev.kaltura.com/usr/local/kalsource/front/workspaces/kmc/trunk@84963 6b8eccd3-e8c5-4e7d-8186-e12b5326b719

--- a/KMC/assets/kmc_skin.css
+++ b/KMC/assets/kmc_skin.css
@@ -729,10 +729,12 @@ NumericStepper
 
 ScrollBar
 {
+	up-arrow-disabled-skin: Embed("Images/Scroll_up2.png" );
 	up-arrow-up-skin: 		Embed("Images/Scroll_up.png" );
 	up-arrow-over-skin:		Embed("Images/Scroll_up1.png");
 	up-arrow-down-skin:		Embed("Images/Scroll_up2.png");
 	
+	down-arrow-disabled-skin:Embed("Images/Scroll_down2.png");
 	down-arrow-up-skin:		Embed("Images/Scroll_down.png" );
 	down-arrow-over-skin:	Embed("Images/Scroll_down1.png");
 	down-arrow-down-skin:	Embed("Images/Scroll_down2.png");
@@ -740,6 +742,7 @@ ScrollBar
 	thumb-up-skin:			Embed("Images/Scroll_barra.png", scaleGridTop="15", scaleGridBottom="16", scaleGridLeft="4", scaleGridRight="5");
 	thumb-over-skin:		Embed("Images/Scroll_barra1.png", scaleGridTop="15", scaleGridBottom="16", scaleGridLeft="4", scaleGridRight="5");
 	thumb-down-skin:		Embed("Images/Scroll_barra2.png", scaleGridTop="15", scaleGridBottom="16", scaleGridLeft="4", scaleGridRight="5");
+	
 	
 	track-skin: 			Embed("Images/Scroll_fondo.png", scaleGridTop="15", scaleGridBottom="16", scaleGridLeft="4", scaleGridRight="5");
 	/*track-down-skin: 		Embed("Images/Scroll_fondo.png", scaleGridTop="26", scaleGridBottom="28", scaleGridLeft="8", scaleGridRight="9");*/
@@ -749,10 +752,12 @@ ScrollBar
 
 HScrollBar
 {
+	up-arrow-disabled-skin: Embed("Images/Scroll_up2.png" );
 	up-arrow-up-skin: 		Embed("Images/Scroll_up.png" );
 	up-arrow-over-skin:		Embed("Images/Scroll_up1.png");
 	up-arrow-down-skin:		Embed("Images/Scroll_up2.png");
 	
+	down-arrow-disabled-skin:Embed("Images/Scroll_down2.png");
 	down-arrow-up-skin:		Embed("Images/Scroll_down.png" );
 	down-arrow-over-skin:	Embed("Images/Scroll_down1.png");
 	down-arrow-down-skin:	Embed("Images/Scroll_down2.png");
